--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -93,38 +93,38 @@ Three other forms were found in the oracle bone script:
 
 ====Compounds====
 {{top3}}
-* {{ja-r|明日|あした}}, {{ja-r|明日|あす}}, {{ja-r|明日|みょうにち}}: tomorrow
+* {{ja-r|明日|あした}}, {{ja-r|明日|あす}}, {{ja-r|明%日|みょう%にち|tomorrow}}
 * {{ja-r|明暗|めいあん}}
 * {{ja-r|明快|めいかい}}
 * {{ja-r|明解|めいかい}}
 * {{ja-r|明海|めいかい}}
 * {{ja-r|明確|めいかく}}
-* {{ja-r|明鏡止水|めいきょうしすい}}
+* {{ja-r|明%鏡%止%水|めい%きょう%し%すい}}
 * {{ja-r|明君|めいくん}}
 * {{ja-r|明言|めいげん}}
 * {{ja-r|明察|めいさつ}}
 {{mid3}}
-* {{ja-r|明示|めいじ}}
+* {{ja-r|明%示|めい%じ}}
 * {{ja-r|明星|みょうじょう}}
-* {{ja-r|明治|^めいじ}}
+* {{ja-r|明%治|^めい%じ}}
 * {{ja-r|明信|^あきのぶ}}
 * {{ja-r|明晰|めいせき}}
-* {{ja-r|明朝|みょうちょう}}, {{ja-r|明朝|^みんちょう}}
+* {{ja-r|明朝|みょうちょう}}, {{ja-r|明%朝|^みん%ちょう}}
 * {{ja-r|明白|めいはく}}
-* {{ja-r|明瞭|めいりょう}}
-* {{ja-r|不明|ふめい}}
+* {{ja-r|明%瞭|めい%りょう}}
+* {{ja-r|不%明|ふ%めい}}
 * {{ja-r|解明|かいめい}}
 {{mid3}}
-* {{ja-r|究明|きゅうめい}}
+* {{ja-r|究%明|きゅう%めい}}
 * {{ja-r|克明|こくめい}}, {{ja-r|克明|^かつあき}}
-* {{ja-r|証明|しょうめい}}
-* {{ja-r|照明|しょうめい}}
-* {{ja-r|灯明|とうみょう}}
+* {{ja-r|証%明|しょう%めい}}
+* {{ja-r|照%明|しょう%めい}}
+* {{ja-r|灯%明|とう%みょう}}
 * {{ja-r|透明|とうめい}}
 * {{ja-r|薄明|はくめい}}
 * {{ja-r|発明|はつめい}}
 * {{ja-r|文明|ぶんめい}}
-* {{ja-r|晨明|しんめい}}: [[dawn]]
+* {{ja-r|晨明|しんめい|[[dawn]]}}
 {{bottom}}
 
 ====Derived terms====
