--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -61,7 +61,7 @@ From {{der|en|ur|پایجامه|tr=pāyjāma}}/{{der|en|hi|पैजामा}},
 * Ido: {{t+|io|pijamo}}
 * Indonesian: {{t+|id|piyama}}
 * Interlingua: {{t|ia|pajama}}
-* Irish: {{t|ga|pitseámaí}}
+* Irish: {{t|ga|pitseámaí|m}}
 * Italian: {{t+|it|pigiama|m}}
 * Japanese: {{t|ja|パジャマ|tr=pajama}}, {{t|ja|寝間着|tr=ねまき, nemaki}}
 * Kazakh: {{t+|kk|пижама|sc=Cyrl}}
