--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -268,7 +268,7 @@ From {{inh|en|enm|pullen}}, from {{inh|en|ang|pullian|t=to pull, draw, tug, pluc
 * Georgian: {{t|ka|თრევა}}
 * German: {{t+|de|ziehen}}
 * Greek:
-*: Ancient Greek: {{t|grc|ἕλκω}}
+*: Ancient: {{t|grc|ἕλκω}}
 * Hebrew: {{t-needed|he}}
 * Hindi: {{t|hi|खींचना}}
 * Hungarian: {{t+|hu|húz}}
