--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -168,6 +168,7 @@ The noun is from {{inh|en|ang|feoht}}, from the verb; compare Dutch {{m|nl|gevec
 
 {{trans-top|(reciprocal) to contend in physical conflict with each other}}
 * Arabic: {{t|ar|عارك|tr=ʿārak}}
+*: Egyptian Arabic: {{t|arz|اتخانق|tr=etxāneʾ}}
 * Azerbaijani: {{t|az|dalaşmaq}}
 {{trans-mid}}
 * Swedish: {{t+|sv|slåss}}
