--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -314,7 +314,7 @@ The noun is from {{inh|en|ang|feoht}}, from the verb; compare Dutch {{m|nl|gevec
 |title=[http://www.economist.com/news/leaders/21583270-new-zealands-plan-regulate-designer-drugs-better-trying-ban-them-and-failing-new A new prescription]
 |passage=As the world's drug habit shows, governments are failing in their quest to monitor every London window-box and Andean hillside for banned plants. But even that Sisyphean task looks easy next to the '''fight''' against synthetic drugs.}}
 #: {{ux|en|I'll put up a '''fight''' to save this company.}}
-# The [[will]] or [[ability]] to fight.
+# {{lb|en|uncountable}} The [[will]] or [[ability]] to fight.
 #: {{ux|en|That little guy has a bit of '''fight''' in him after all.&nbsp;&nbsp; As soon as he saw the size of his opponent, all the '''fight''' went out of him.}}
 # {{lb|en|obsolete}} A screen for the combatants in ships.
 #* Dryden
