--- a/en/感/感.15666.wikitext
+++ b/en/感/感.15666.wikitext
@@ -78,7 +78,7 @@ A popular stylistic choice in the written form of the character {{l|zh|感}} inv
 {{der5|lang=ja|{{ja-l|感温}}
 |{{ja-l|感化}}
 |{{ja-l|感懐}}
-|{{ja-l|感慨|かんがい|kangai}}
+|{{ja-r|感慨|かんがい}}
 |{{ja-l|感慨無量}}
 |{{ja-l|感覚}}
 |{{ja-l|感官}}
@@ -88,7 +88,7 @@ A popular stylistic choice in the written form of the character {{l|zh|感}} inv
 |{{ja-l|感激}}
 |{{ja-l|感光}}
 |{{ja-l|感謝}}
-|{{ja-l|感知|かんち|kanchi}}: [[perception]]
+|{{ja-r|感知|かんち|[[perception]]}}
 |{{ja-l|感受}}
 |{{ja-l|感受性}}
 |{{ja-l|感傷}}
