t+it:[[mettere]] ([[WT:EDIT|Assisted]]) <play#51171408>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -438,7 +438,7 @@ The noun is from {{inh|en|enm|pleye}}, from {{inh|en|ang|plæġ}}, {{m|ang|pleġ
 * Indonesian: {{t+|id|memutar}}
 {{trans-mid}}
 * Irish: {{t|ga|seinn}}
-* Italian: {{t+|it|riproduci}}
+* Italian: {{t+|it|riproduci}}, {{t+|it|mettere }}
 * Japanese: {{t+check|ja|流す|tr=nagasu|sc=Jpan}}
 * Kurdish:
 *: Sorani: {{t+|ku|لێدان|tr=lédan|sc=ku-Arab}}
