t+mi:[[ata]] t+mi:[[ata iti]] ([[WT:EDIT|Assisted]]) <icon#51176307>

--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -56,6 +56,7 @@ From {{etyl|la|en}} {{m|la|icon}}, from {{etyl|grc|en}} {{m|grc|εἰκών||lik
 * Hungarian: {{t+|hu|ikon}}
 * Irish: {{t|ga|íocón|m}}
 * Italian: {{t+|it|icona|f}}
+* Maori: {{t|mi|ata}}, {{t|mi|ata iti}}
 * Norman: {{t|nrf|icône|f}}
 {{trans-mid}}
 * Norwegian:
