t+mi:[[tapahi]] ([[WT:EDIT|Assisted]]) <cut#51176310>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -680,6 +680,7 @@ Displaced native Middle English [[snithen]] (from Old English [[sniþan]]) (comp
 * Greek: {{t+|el|αποκοπή|f}}
 {{trans-mid}}
 * Gujarati: {{t|gu|કાપવું}}
+* Maori: {{t|mi|tapahi}}
 * Portuguese: {{t+|pt|recortar}}
 * Scottish Gaelic: {{t|gd|geàrr}}
 {{trans-bottom}}
