t+gl:[[tanguer]] ([[WT:EDIT|Assisted]]) <play#51176977>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -237,7 +237,7 @@ The noun is from {{inh|en|enm|pleye}}, from {{inh|en|ang|plæġ}}, {{m|ang|pleġ
 * Faroese: {{t|fo|leika}}, {{t+|fo|spæla}}
 * Finnish: {{t+|fi|soittaa}}
 * French: {{t+|fr|jouer|alt=jouer de}}
-* Galician: {{t+|gl|tocar}}
+* Galician: {{t+|gl|tocar}}, {{t+|gl|tanguer}}
 * Georgian: {{t|ka|უკრავს}}
 * German: {{t+|de|spielen}}
 * Greek: {{t+|el|παίζω}}
