--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -418,6 +418,7 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 * Japanese: {{qualifier|racecourse}} {{t|ja|ストレート|tr=sutorēto}}, {{qualifier|running track}} {{t+|ja|直線|tr=chokusen}}
 * Portuguese: {{t+|pt|reta|f}}
 * Russian: {{t+|ru|пряма́я|f}}
+* Spanish: {{t+|es|derecho}}
 * Swedish: {{t+|sv|raksträcka|c}}, {{t+|sv|raka|c}}
 {{trans-bottom}}
 
