--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -153,7 +153,7 @@ Borrowed from {{bor|en|fr|France}}, {{der|en|fro|France}}, from {{der|en|la|Fran
 * Occitan: {{t+|oc|França|f}}
 * Old Church Slavonic:
 *: Cyrillic: {{t|cu|Франкїꙗ|f|sc=Cyrs}}
-* Old English: {{t|ang|Francland}}
+* Old English: {{t|ang|Francland|n}}, {{t|ang|Francena rīċe|n}}, {{t|ang|Francrīċe|n}}
 * Oriya: {{t|or|ଫ୍ରାନ୍ସ୍}}
 * Ossetian: {{t|os|Франц}}
 * Pashto: {{t+|ps|فرانسه|tr=frânsa|sc=ps-Arab}}, {{t|ps|فرانس|tr=frâns|sc=ps-Arab}}
