--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -79,6 +79,9 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 {{trans-mid}}
 * Indonesian: {{t+|id|pirang}}
 * Japanese: {{t+|ja|金髪|tr=kinpatsu}} {{qualifier|hair color}}
+* Kurdish:
+*: Central Kurdish: {{t+|ckb|کاڵ}}
+*: Southern Kurdish: {{t|sdh|ھۊل}}
 * Persian: {{t+|fa|بور}}
 * Polish: {{t+|pl|blond|m}}
 * Portuguese: {{t+|pt|loiro|m}}
