--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -422,7 +422,7 @@ The noun is from {{inh|en|ang|feoht}}, from the verb; compare Dutch {{m|nl|gevec
 * French: {{t+|fr|bataille|f}}
 * German: {{t+|de|Kampf|m}}, {{t+|de|Schlacht|f}}
 * Greek: {{t+|el|μάχη|f}}
-*: Ancient Greek: {{t|grc|μάχη|f}}, {{t|grc|δῆρις|f}} {{qualifier|Epic}}
+*: Ancient: {{t|grc|μάχη|f}}, {{t|grc|δῆρις|f}} {{qualifier|Epic}}
 * Hebrew: {{t+|he|קרב|m|tr=kráv}}
 * Hindi: {{t+|hi|युद्ध|tr=yud'dha|sc=Deva}}, {{t+|hi|लड़ाई|tr=laṛā'ī|sc=Deva}}, {{t+|hi|झगड़ा|tr=jhagṛā|sc=Deva}}
 * Icelandic: {{t+|is|bardagi|m}}
@@ -465,7 +465,7 @@ The noun is from {{inh|en|ang|feoht}}, from the verb; compare Dutch {{m|nl|gevec
 * Irish: {{t|ga|troid|f}}
 * Italian: {{t+|it|rissa|f}}
 * Japanese: {{t+|ja|喧嘩|tr=けんか, kenka|sc=Jpan}}
-* Latin: {{t+|la|pugna}}
+* Latin: {{t+|la|pugna}}, {{t|la|rixa|f}}
 * Latvian: {{t|lv|kautiņš}}
 {{trans-mid}}
 * Lithuanian: {{t|lt|muštynės|p}}, {{t|lt|peštynės|p}}, {{t|lt|grumtynės|p}}
