--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -67,7 +67,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * {{l|en|Indian plum}} ({{taxlink|Flacourtia|genus|ver=181106}} spp, esp {{taxlink|Flacourtia indica|species|ver=181106}}; {{taxlink|Osmaronia cerasiformis|species|ver=181106}})
 * {{vern|Jamaica plum}} ({{taxlink|Spondias mombin|species|ver=181106}})
 * {{l|en|Japanese plum}} (''[[Prunus mume]]'', {{taxlink|Prunus salicina|species|ver=181106}})
-* {{vern|Japan plum}} ({{taxlink|Diospyros kaki|species|ver=181106}}, ''[[Eriobotrya japonica]]'')
+* {{vern|Japan plum}} (''{{l|mul|Diospyros kaki}}'', ''[[Eriobotrya japonica]]'')
 {{rel-mid4}}
 * {{vern|Morocco plum}}
 * {{l|en|Natal plum}} ({{taxlink|Carissa bispinosa|species|ver=181106}}, {{taxlink|Carissa grandiflora|species|ver=181106}})
