--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -34,7 +34,7 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 
 ====Synonyms====
 * {{sense|State of Israel}} the [[State of Israel]] {{qualifier|official name}}, [[Jewsrael]] {{qualifier|derogatory}}, [[Zionistan]] {{qualifier|derogatory}}
-* {{sense|Land of Israel}} the [[Land of Israel]], [[Palestine]], the [[Holy Land]], [[Canaan]]
+* {{sense|Land of Israel}} the [[Lands of Israel]], [[Palestine]], the [[Holy Land]], [[Canaan]]
 * {{sense|the Jews}} the [[Children of Israel]], the [[Israelite]]s, [[Zion]]
 
 ====Derived terms====
