--- a/en/垂/垂.13061.wikitext
+++ b/en/垂/垂.13061.wikitext
@@ -83,7 +83,7 @@
 * {{ja-r|垂れる|たれる}}: hang down
 {{mid3}}
 * {{ja-r|垂れ下がる|たれさがる}}: hang, dangle
-* {{ja-r|雨垂れ|あまだれ}}: raindrops
+* {{ja-r|雨%垂れ|あま%だれ}}: raindrops
 * {{ja-r|垂らす|たらす}}: hang down
 * {{ja-r|髪を垂らす|かみをたらす}}: let one's hair hang down
 {{mid3}}
