t+mi:[[kirihuru]] ([[WT:EDIT|Assisted]]) <felt#51203546>

--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -64,6 +64,7 @@ From {{inh|en|enm|felt}}, from {{inh|en|ang|felt}}, from {{inh|en|gem-pro|*felta
 * Korean: {{t|ko|펠트}}
 * Kyrgyz: {{t|ky|кийиз}}
 * Luxembourgish: {{t|lb|Filz|m}}
+* Maori: {{t|mi|kirihuru}}
 * Mongolian: {{t+|mn|эсгий|sc=Cyrl}}
 * Nepali: {{t-needed|ne}}
 * Norwegian: {{t+|no|filt|m}}
