t+pl:[[muzykować]] ([[WT:EDIT|Assisted]]) <play#51207176>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -263,7 +263,7 @@ The noun is from {{inh|en|enm|pleye}}, from {{inh|en|ang|plæġ}}, {{m|ang|pleġ
 * Norman: {{t|nrf|jouer}}, {{t|nrf|sonner}}
 * Old English: {{t|ang|lācan}}, {{t|ang|gliwian}}
 * Pashto: {{t+|ps|ږغول|tr=zhaγawəl|sc=ps-Arab}}
-* Polish: {{t+|pl|grać|impf}} (na)
+* Polish: {{t+|pl|grać|impf}} (na), {{t+|pl|muzykować|impf}} {{qualifier|+ na + locative}}
 * Portuguese: {{t+|pt|tocar}}
 * Quechua: {{t+|qu|takiy}}
 * Romanian: {{t+|ro|cânta}} (la)
