--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -72,7 +72,7 @@ From {{inh|en|enm|flesh}}, {{m|enm|flesch}}, {{m|enm|flæsch}}, from {{inh|en|an
 * Galician: {{t+|gl|carne|f}}
 * German: {{t+|de|Fleisch|n}}
 * Greek: {{t+|el|σάρκα|f}}
-*: Ancient: {{t|grc|σάρξ|f|sc=polytonic}}
+*: Ancient: {{t|grc|σάρξ|f}}
 * Hungarian: {{t+|hu|hús}}
 * Ido: {{t+|io|karno}}
 * Irish: {{t+|ga|feoil|f}}
