--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -90,7 +90,7 @@
 * Greenlandic: {{t|kl|Naalagaaffeqatigiit}}
 * Guaraní: {{t|gn|Tetã peteĩ reko Amérikagua}}
 * Gujarati: {{t|gu|સંયુકત રાજ્ય અમેરિકા|sc=Gujr}}
-* Haryani: {{t|bgc|अ़मरेख्यासांजुक्ट्टराजये}}, {{t|bgc|सांजुक्ट्टराजये}}|m|sc=Deva}
+* Haryani: {{t|bgc|अ़मरेख्यासांजुक्ट्टराजये}}, {{t|bgc|सांजुक्ट्टराजये}}sc=Deva}
 * Hausa: {{t|ha|Tarayyar Amurka}}
 * Hawaiian: {{t|haw|ʻAmelika Huipūʻia}}, {{t|haw|ʻAmelika Hui}}
 * Hebrew: {{t|he|אַרְצוֹת הַבְּרִית שֶׁל אָמֶרִיקָה|tr=artsot ha-brit shel amérika}}, {{t+|he|אַרְצוֹת הַבְּרִית|f-p|tr=artsot ha-brit}}, {{t|he|ארה״ב|tr=arh"b}}
@@ -159,7 +159,7 @@
 * Romansch: {{t|rm|Stadis Unids da l'America|m}}
 * Russian: {{t+|ru|Соединённые Шта́ты Аме́рики|m-p}}, {{t+|ru|США|m-p}}
 * Rusyn: {{t|rue|Споєны Штаты Америцькы|m-p|sc=Cyrl}}
-* Sanskrit: {{t|sa|अमरेखिकासंयुक्तराज्यः}}, {{t|sa|संयुक्तराज्यः}}|m|sc=Deva}
+* Sanskrit: {{t|sa|अमरेखिकासंयुक्तराज्यः}}, {{t|sa|संयुक्तराज्यः}}sc=Deva}
 * Samoan: {{t|sm|Iunaite Sitete o Amerika}}
 * Scottish Gaelic: Na {{t|gd|Stàitean Aonaichte|f-p}}, Na {{t|gd|Stàitean Aonaichte na h-Aimeireaga|f-p}}
 * Serbo-Croatian:
