--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -317,7 +317,7 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 * Portuguese: {{t+|pt|empurrão|m}}
 * Russian: {{t+|ru|толчо́к|m}}
 * Spanish: {{t+|es|empujón|m}}
-* Swedish: {{t+|sv|ryck}}
+* Swedish: {{t+|sv|knuff}}
 * Telugu: {{t|te|వెనుకకు నెట్టి ముందుకు పోవు}}
 * Waray-Waray: {{t|war|tu-lang}}, {{t|war|du-so}}
 {{trans-bottom}}
