--- a/en/愡/愡.15668.wikitext
+++ b/en/愡/愡.15668.wikitext
@@ -45,4 +45,7 @@
 # {{defn|lang=ja|sort=心09}}
 
 ====Readings====
-* {{ja-readings|on=[[そう]] (sō), [[す]] (su)|kun=}}
+{{ja-readings
+|goon=す
+|kanon=そう
+|kun=}}
