--- a/en/偬/偬.11132.wikitext
+++ b/en/偬/偬.11132.wikitext
@@ -28,7 +28,10 @@
 # {{defn|lang=ja|sort=人09}}
 
 ====Readings====
-* {{ja-readings|on=[[そう]] (sō)|kun=[[くるしむ]] (kurushimu), [[せわしい]] (sewashii), [[あわただしい]] (awatadashii)}}
+{{ja-readings
+|goon=す
+|kanon=そう
+|kun=くる-しむ}}
 
 ----
 
