--- a/en/惠/惠.15605.wikitext
+++ b/en/惠/惠.15605.wikitext
@@ -64,9 +64,10 @@
 
 ====Readings====
 {{ja-readings
-|on=けい, え
-|kun=めぐ-む
-}}
+|goon=え<ゑ
+|kanon=けい<けい<くゑい
+|kun=めぐみ-, めぐ-む
+|nanori=あい, あや, け, さと, さとし, しげ, しげる, へい, み, めぐる, やす}}
 
 ----
 
