--- a/en/傘/傘.11179.wikitext
+++ b/en/傘/傘.11179.wikitext
@@ -96,10 +96,10 @@
 {{ja-noun|かさ|count=本|カサ}}
 
 # [[umbrella]] {{gl|cloth-covered frame used for protection against rain or sun}}
-#: {{ja-usex|傘を差す|かさ を さす|hold an umbrella}}
-#: {{ja-usex|傘を広げる|かさ を ひろげる|open an umbrella}}
-#: {{ja-usex|傘をすぼめる|かさ を すぼめる|close an umbrella}}
-#: {{ja-usex|傘を巻く|かさ を まく|roll up an umbrella}}
+#: {{ja-usex|'''傘'''を差す|'''かさ''' を さす|hold an umbrella}}
+#: {{ja-usex|'''傘'''を広げる|'''かさ''' を ひろげる|open an umbrella}}
+#: {{ja-usex|'''傘'''をすぼめる|'''かさ''' を すぼめる|close an umbrella}}
+#: {{ja-usex|'''傘'''を巻く|'''かさ''' を まく|roll up an umbrella}}
 #* {{quote-book
 |genre=fiction
 |||first=Rumiko
@@ -115,7 +115,7 @@
 |isbn=4-09-123461-5
 |volume=31
 ||87
-|{{ja-usex|その'''カサ'''に一%緒にはいった二人は必ず相%思%相%愛の仲になるんですって、だから伝%説の'''相%合ガサ'''。|その '''カサ''' に いっ%しょ に は いった ふ%たり は かならず そう%し% そう%あい の なか に なるん ですって、だから でん%せつ の '''あい%あいガサ'''。|Legend has it as long as two people are under that umbrella together, they’re always in love, and that’s the legendary coupling umbrella.}}{{ja-usex|ロマンチック よ ねー。|How romantic.}}
+|{{ja-usex|その'''カサ'''に一%緒にはいった二人は必ず相%思%相%愛の仲になるんですって、だから伝%説の相%合'''ガサ'''。|その '''カサ''' に いっ%しょ に は いった ふ%たり は かならず そう%し% そう%あい の なか に なるん ですって、だから でん%せつ の あい%あい'''ガサ'''。|Legend has it as long as two people are under that umbrella together, they’re always in love, and that’s the legendary coupling umbrella.}}
 |chapter={{lj|[ＰＡＲＴ](パート).６　[伝](でん)[説](せつ)の[相](あい)[合](あい)ガサ}}
 |trans-chapter=PART.6 The Legendary Coupling Umbrella
 |lang=ja}}
