--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -228,7 +228,7 @@ From {{etyl|enm|en}} {{m|enm|cost}}, {{m|enm|coust}}, from {{m|enm|costen||to co
 * Korean: {{t+|ko|비용}}
 * Kurdish:
 *: Sorani: {{t+|ku|به‌ها}}, {{t+|ku|نرخ}}
-* Latin: {{t|la|pretium}}
+* Latin: {{t|la|pretium}}, {{t|la|sūmptus|m}}
 * Latvian: {{t|lv|maksa|f}}, {{t|lv|cena|f}}, {{t|lv|dārdzība|f}}
 * Mongolian: {{t+|mn|өртөг}}
 * Norman: {{t|nrf|couôtage|m}}, {{t|nrf|couôtement|m}}
