--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -178,7 +178,7 @@
 * Sotho: {{t|st|Amerika}}
 * Southern Altai: {{t|alt|Америка Кошмо Штаттары|tr=Amerika kośmo Śtattarı|sc=Cyrl}}
 * Spanish: {{t+|es|Estados Unidos de América|m-p}}, {{t+|es|Estados Unidos|m-p}}, {{t+|es|EE. UU.|m-p}}, {{t+|es|EEUU|m-p}}
-* Swahili: {{t|sw|Muungano wa Madola ya Amerika}}
+* Swahili: {{t|sw|Muungano wa Madola ya Amerika}}{{t|sw|Marekani}}
 * Swedish: {{t+|sv|Amerikas förenta stater}}, {{t+|sv|Förenta staterna}}, {{t+|sv|USA}}, {{t|sv|Staterna}}
 * Tagalog: {{t|tl|Estados Unidos ng Amerika}}, {{t|tl|Nangagkakaisang Banwa ng Amerika}}, {{t|tl|Nagkakaisang Kalupaan ng Amerika}}
 * Tajik: {{t|tg|Иёлоти Муттаҳидаи Амриқо|sc=Cyrl}}
