{{Han compound|日|乍|c1=s|c2=p|t1=sun|ls=psc}}. Zhengzhang 2003, Shuowen, http://www.guoxuedashi.com/kangxi/pic.php?f=ziyuanlxq&p=605 http://www.guoxuedashi.com/kangxi/pic.php?f=hzyl&p=842 <昨#51243737>

--- a/en/昨/昨.16976.wikitext
+++ b/en/昨/昨.16976.wikitext
@@ -16,6 +16,7 @@
 
 ===Glyph origin===
 {{Han etym}}
+{{Han compound|日|乍|c1=s|c2=p|t1=sun|ls=psc}}.
 
 ===Pronunciation===
 {{zh-pron
@@ -36,7 +37,7 @@
 {{zh-hanzi}}
 
 # [[yesterday]]
-# in [[former]] [[time]]s, [[past]]
+# in [[former]] [[time]]s; [[past]]
 
 ===Compounds===
 {{zh-der|昨暝|昨昏|一昨|今是昨非|昨來|昨兒|昨前|昨夜|昨天|昨日|昨晚|昨非今是}}
