t+fr:[[affluent]] t+fr:[[branche]] t+fr:[[branchement conditionnel]] ([[WT:EDIT|Assisted]]) <branch#51245205>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -207,6 +207,7 @@ From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, borrowed fro
 {{trans-top|creek or stream which flows into a larger river}}
 * Finnish: {{t+|fi|sivujoki}}
 {{trans-mid}}
+* French: {{t+|fr|affluent|m}}
 {{trans-bottom}}
 
 {{trans-top|geometry: one of the portions of a curve that extends to infinity}}
@@ -276,6 +277,7 @@ From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, borrowed fro
 * Danish: {{t+|da|område}}
 * Dutch: {{t+|nl|branch}} (of business), {{t+|nl|bedrijfstak}} (of business), {{t+|nl|vakgebied}} (of knowledge)
 * Finnish: {{t+|fi|ala}}
+* French: {{t+|fr|branche|f}}
 * Georgian: {{t|ka|დარგი}}, {{t|ka|სფერო}}
 * German: {{t+|de|Branche|f}} (of business), {{t+|de|Zweig|m}}, {{t+|de|Gebiet|n}}
 * Greek: {{t+|el|κλάδος|m|sc=Grek}}
@@ -309,6 +311,7 @@ From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, borrowed fro
 {{trans-top|computer architecture: conditional sequence of code}}
 * Finnish: {{t+|fi|haara}}
 {{trans-mid}}
+* French: {{t|fr|branchement conditionnel|m}}
 {{trans-bottom}}
 
 {{trans-see|rail transport: branch line|branch line}}
