--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -497,6 +497,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 {{trans-bottom}}
 
 {{trans-top|music: to transition from one piece or section to another}}
+* French: {{t+|fr|fondre}}
 * German: {{t|de|überwechseln}}
 {{trans-mid}}
 {{trans-bottom}}
@@ -504,6 +505,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 {{trans-top|computing, communication: to connect with a bridge}}
 * Finnish: {{t|fi|sillata}}
 {{trans-mid}}
+* French: {{t+|fr|relier}}
 * Macedonian: {{t|mk|премостува|sc=Cyrl}}
 {{trans-bottom}}
 
