--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -24,6 +24,9 @@ Three other forms were found in the oracle bone script:
 * {{zh-l|*眀}} < {{Han compound|目|月|t1=eye}} – bright eyes. This form was rarely attested, so it is still uncertain whether this form is actually equivalent to {{lang|zh|明}}. It reappeared in the bamboo script of the {{w|Qin dynasty}}, but this was probably a corruption of {{zh-l|*朙}}.
 * {{zh-l|*𤰾}} < {{Han compound|田|月}} – probably a corruption of the above forms.
 
+===Etymology===
+Of either {{inh|zh|sit-pro|-}} origin, compare {{cog|bo|tr=mdangs|t=facial color, appearance, brightness}} ({{zh-ref|Bodman, 1980}}) or from {{der|zh|aav}}. For more see {{och-l|[[亮]]}}.
+
 ===Pronunciation===
 {{zh-pron
 |m=míng,er=y
