/* Etymology */ This was borrowed WELL before English became modern English or French became modern French!!! <France#51246642>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -8,7 +8,7 @@
 * {{l|en|Fraunce}} {{qualifier|obsolete}}
 
 ===Etymology===
-Borrowed from {{bor|en|fr|France}}, {{der|en|fro|France}}, from {{der|en|la|Francia}}, from {{m|la|Francī}}, the name of a Germanic tribe, of unclear (but {{etyl|gem-pro|en}}) origin.<ref>A. C. Murray, ''From Roman to Merovingian Gaul: A Reader''. Broadview Press Ltd, 2000. p. 1.</ref> Compare {{m|en|Frank}}.
+From {{inh|en|enm|France}}, borrowed from {{bor|en|frm|France}}, from {{der|en|fro|France}}, from {{der|en|la|Francia}}, from {{m|la|Francī}}, the name of a Germanic tribe, of unclear (but {{etyl|gem-pro|en}}) origin.<ref>A. C. Murray, ''From Roman to Merovingian Gaul: A Reader''. Broadview Press Ltd, 2000. p. 1.</ref> Compare {{m|en|Frank}}.  Displaced {{term|eno|Francland}}, {{term|eno|Francrīċe}}
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/fɹɑːns/|/fɹæns/|lang=en}}
