--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -18,6 +18,11 @@
 {{Han etym}}
 Originally {{och-l|曐}}, which is a {{Han compound|ls=psc|nocap=1|晶|生|c1=s|c2=p|t1=twinkling stars}}.
 
+===Etymology===
+Possibly from {{och-l|[[清]]}} "clear", possibly from {{inh|zh|*(t)s(j)aŋ}}.
+
+Proto-{{w|Kiranti languages|Kiranti}} *''saŋ'' either develops parallelly from the same root ({{zh-red|Schuessler (2007)}}) or derives from {{cog|sit-pro|*s-kar||star}} (STEDT).
+
 ===Pronunciation===
 {{zh-pron
 |m=xīng,er=y
