--- a/en/c/chose.6833.wikitext
+++ b/en/c/chose.6833.wikitext
@@ -12,7 +12,7 @@
 ====Verb====
 {{head|en|verb form}}
 
-# {{en-simple past of|choose}}
+# {{en-simple past of|chose}}
 
 ===Etymology 2===
 {{etyl|fr|en}}, from {{etyl|la|en}} {{lena}} {{m|la|causa||cause, reason}}. See {{m|en|cause}}.
