t+sv:[[vara skit]] t+sv:[[vara botten]] t+sv:[[vara värdelös]] ([[WT:EDIT|Assisted]]) <suck#51259192>

--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -244,7 +244,7 @@ From {{etyl|enm|en}} {{m|enm|souken|souken, suken|}}, from {{etyl|ang|en}} {{m|a
 * Portuguese: {{t|pt|[[ser]] [[um]] [[saco]]}}, {{t|pt|[[ser]] [[uma]] [[droga]]}}
 * Russian: {{t+|ru|отсто́й}} {{qualifier|noun}}
 * Spanish: {{t|es|ser un asco}}, {{t|es|dar asco}}, {{t+|es|apestar}}
-* Swedish: {{t+|sv|suga}}
+* Swedish: {{t+|sv|suga}}, {{t|sv|vara skit}}, {{t|sv|vara botten}}, {{t|sv|vara värdelös}}
 * Turkish: {{t+|tr|berbat olmak}}
 {{trans-bottom}}
 
