--- a/en/垃/垃.13062.wikitext
+++ b/en/垃/垃.13062.wikitext
@@ -25,7 +25,7 @@
 # {{zh-only|垃圾}}
 
 =====Compounds=====
-{{zh-der|垃圾|垃圾分類|垃圾回收|垃圾堆|垃圾場|垃圾山|垃圾桶|垃圾相|垃圾筒|垃圾箱|垃圾車|垃圾量|垃圾食物}}
+{{zh-der|垃圾:trash|垃圾分類|垃圾回收|垃圾堆|垃圾場|垃圾山|垃圾桶|垃圾相|垃圾筒|垃圾箱|垃圾車|垃圾量|垃圾食物}}
 
 ===Pronunciation 2===
 {{zh-pron
