--- a/en/坎/坎.13009.wikitext
+++ b/en/坎/坎.13009.wikitext
@@ -46,7 +46,7 @@
 # 29th [[hexagram]] of the [[I Ching]]
 # {{zh-short|坎德拉}}
 
-====Compounds====
+===Compounds===
 {{zh-der|坎壈|坎坎|心坎|命途坎坷|屯坎|坎坷|坎井之蛙|坎兒|坎肩|坎窞|坎帕拉|坎城影展|坎兒井|坎培拉|坎阱|流行坎止|石坎|號坎兒|門坎|調坎|落坎兒|烏坎|羅坎}}
 
 ----
