--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -374,7 +374,7 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 {{trans-top|directly; without pause, delay or detour}}
 * Finnish: {{t+|fi|suoraan}}
 * French: {{t+|fr|directement}}
-* Greek: {{t+|el|αμέσως}}
+* Greek: {{t+|el|αμέσως}}, {{t+|el|κατευθείαν}}
 *: Ancient Greek: {{t|grc|εὐθύ}}
 {{trans-mid}}
 * Italian: {{t+|it|direttamente}}, {{t+|it|dritto}}
