--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -8,7 +8,7 @@
 * {{l|en|Fraunce}} {{qualifier|obsolete}}
 
 ===Etymology===
-From {{inh|en|enm|France}}, borrowed from {{bor|en|frm|France}}, from {{der|en|fro|France}}, from {{der|en|la|Francia}}, from {{m|la|Francī}}, the name of a Germanic tribe, of unclear (but {{etyl|gem-pro|en}}) origin.<ref>A. C. Murray, ''From Roman to Merovingian Gaul: A Reader''. Broadview Press Ltd, 2000. p. 1.</ref> Compare {{m|en|Frank}}.  Displaced {{term|eno|Francland}}, {{term|eno|Francrīċe}}
+From {{inh|en|enm|France}}, borrowed from {{bor|en|frm|France}}, from {{der|en|fro|France}}, from {{der|en|la|Francia}}, from {{m|la|Francī}}, the name of a Germanic tribe, of unclear (but {{der|en|gem-pro|-}}) origin.<ref>A. C. Murray, ''From Roman to Merovingian Gaul: A Reader''. Broadview Press Ltd, 2000. p. 1.</ref> Compare {{m|en|Frank}}.  Displaced {{term|eno|Francland}}, {{term|eno|Francrīċe}}
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/fɹɑːns/|/fɹæns/|lang=en}}
@@ -32,7 +32,7 @@ From {{inh|en|enm|France}}, borrowed from {{bor|en|frm|France}}, from {{der|en|f
 |page=
 |passage=Hollande told cheering supporters in his rural fiefdom of Corrèze in south-west '''France''' that he was best-placed to lead '''France''' towards change, saying the vote marked a "rejection" of Sarkozy and a "sanction" against his five years in office.}}
 # {{surname|French|from=French}}
-#: [[w:Anatole France|Anatole France]], a French poet, journalist, and novelist
+#: {{w|Anatole France}}, a French poet, journalist, and novelist
 
 ====Related terms====
 {{rel3|Franco-|francophobe|Francophone|Frankland|French|Frenchman|New France|Tour de France|lang=fr}}
