--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -8,7 +8,7 @@
 * {{l|en|Fraunce}} {{qualifier|obsolete}}
 
 ===Etymology===
-From {{inh|en|enm|France}}, borrowed from {{bor|en|frm|France}}, from {{der|en|fro|France}}, from {{der|en|la|Francia}}, from {{m|la|Francī}}, the name of a Germanic tribe, of unclear (but {{der|en|gem-pro|-}}) origin.<ref>A. C. Murray, ''From Roman to Merovingian Gaul: A Reader''. Broadview Press Ltd, 2000. p. 1.</ref> Compare {{m|en|Frank}}.  Displaced {{term|eno|Francland}}, {{term|eno|Francrīċe}}
+From {{inh|en|enm|France}}, borrowed from {{bor|en|frm|France}}, from {{der|en|fro|France}}, from {{der|en|la|Francia}}, from {{m|la|Francī}}, the name of a Germanic tribe, of unclear (but {{der|en|gem-pro|-}}) origin.<ref>A. C. Murray, ''From Roman to Merovingian Gaul: A Reader''. Broadview Press Ltd, 2000. p. 1.</ref> Compare {{m|en|Frank}}.  Displaced {{m|eno|Francland}}, {{m|eno|Francrīċe}}.
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/fɹɑːns/|/fɹæns/|lang=en}}
@@ -279,7 +279,7 @@ From {{inh|fr|frm|France}}, from {{inh|fr|fro|France}}, from {{inh|fr|ML.|-}} or
 From {{inh|frm|fro|France}}.
 
 ===Pronunciation===
-{{rfp||lang=frm}}
+{{rfp|lang=frm}}
 
 ===Proper noun===
 {{head|frm|proper noun|g=f}}
