--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -11,6 +11,7 @@ From {{inh|en|enm|cenyth}}, from {{der|en|ML.|cenit}}, a transliteration of {{de
 * {{a|US}} {{IPA|/ˈzi.nɪθ/|lang=en}}
 * {{audio|En-uk-zenith.ogg|Audio (UK)|lang=en}}
 * {{audio|en-us-zenith.ogg|Audio (US)|lang=en}}
+* {{audio|en-au-zenith.ogg|Audio (AU)|lang=en}}
 
 ===Noun===
 {{en-noun}}
