/* Pronunciation */ per audiofile <zenith#51264089>

--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -7,7 +7,7 @@
 From {{inh|en|enm|cenyth}}, from {{der|en|ML.|cenit}}, a transliteration of {{der|en|ar|سَمْت||direction, path}} which is in itself a weak abbreviation of {{m|ar|سَمْت اَلرَّأْس||direction of the head}}.
 
 ===Pronunciation===
-* {{a|UK}} {{IPA|/ˈzɛn.ɪθ/|lang=en}}
+* {{a|UK|AU}} {{IPA|/ˈzɛn.ɪθ/|lang=en}}
 * {{a|US}} {{IPA|/ˈzi.nɪθ/|lang=en}}
 * {{audio|En-uk-zenith.ogg|Audio (UK)|lang=en}}
 * {{audio|en-us-zenith.ogg|Audio (US)|lang=en}}
