--- a/en/u/unvoluntary.7221.wikitext
+++ b/en/u/unvoluntary.7221.wikitext
@@ -6,8 +6,9 @@
 ===Adjective===
 {{en-adj}}
 
-# [[involuntary]]
-#* {{rfdate|}} {{rfquotek|Fuller|lang=en}}
+# {{lb|en|obsolete}} [[involuntary|Involuntary]].
+#* '''1655''', {{w|Thomas Fuller}}, ''The Church-History of Britain from the Birth of Jesus until the Year M.DC.XLVIII,'' London: John Williams, “I. Century,” p.{{nbsp}}2,<sup>[http://name.umdl.umich.edu/A40655.0001.001]</sup>
+#*: {{...}} may their Mistake herein be as freely forgiven them, as I hope and desire that the Charitable ''Reader'' will with his Pardon meet those '''unvoluntary''' Errours, which in this Work by me shall be committed.
 
 ====Translations====
 {{trans-see|involuntary}}
