--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -75,6 +75,7 @@ From {{inh|en|enm|counten}}, borrowed from {{bor|en|xno|conter}}, from {{der|en|
 * Georgian: {{t|ka|დათვლა}}, {{t|ka|თვლა}}
 * German: {{t+|de|zählen}}
 * Greek: {{t+|el|μετράω}}
+*: Ancient: {{t|grc|ἀριθμέω}}
 * Haitian Creole: {{t|ht|konte}}
 * Hawaiian: {{t|haw|helu}}
 * Hebrew: {{t+|he|ספר|tr=safár|sc=Hebr}}, {{t+|he|מָנָה|tr=maná|sc=Hebr}}
