--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -19,9 +19,9 @@
 Originally {{och-l|曐}}, which is a {{Han compound|ls=psc|nocap=1|晶|生|c1=s|c2=p|t1=twinkling stars}}.
 
 ===Etymology===
-Possibly from {{och-l|[[清]]}} "clear", in turn from {{inh|zh|sit-pro|*(t)s(j)aŋ}}.
+Possibly cognate with {{och-l|清|clear}} ({{zh-ref|Schuessler, 2007}}), in turn from {{inh|zh|sit-pro|*(t)s(j)aŋ||clear; pure; clean}}.
 
-Proto-{{w|Kiranti languages|Kiranti}} *''saŋ'' "star" either develops parallelly from the same root ({{zh-ref|Schuessler (2007)}}) or derives from {{cog|sit-pro|*s-kar||star}} (STEDT).
+Proto-{{w|Kiranti languages|Kiranti}} {{m|und|*saŋ||star}} either develops from a parallel {{cog|sit}} root ({{zh-ref|Schuessler, 2007}}) or derives from {{cog|sit-pro|*s-kar||star}} (STEDT).
 
 ===Pronunciation===
 {{zh-pron
