--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -89,7 +89,7 @@ From {{inh|en|enm|cote}}, {{m|enm|coate}}, {{m|enm|cotte}}, from {{der|en|fro|co
 * Korean: {{t+|ko|코트}}, {{t+|ko|외투}}
 * Kyrgyz: {{t|ky|пальто}}
 * Latgalian: {{t|ltg|svuorks}}, {{t|ltg|kuļuks}}, {{t|ltg|biņdzjuks}}, {{t|ltg|sveita}}
-* Latin: {{t|la|pallium|n}}
+* Latin: {{t|la|pallium|n}}, {{t|la|laena|f}}
 * Latvian: {{t|lv|mētelis|m}}, {{t|lv|svārki|m-p}}
 * Lithuanian: {{t|lt|paltas|m}}
 {{trans-mid}}
