/* Compounds */ 高坪|花坪 <坪#51323660>

--- a/en/坪/坪.13037.wikitext
+++ b/en/坪/坪.13037.wikitext
@@ -40,7 +40,7 @@
 * {{qualifier|Min Nan}} {{thcwd|3717}}
 
 ===Compounds===
-{{zh-der|坪數|坪場|地坪|停機坪|坪林|坪壩|建坪|阿坶坪|草坪|馬坪|卸甲坪|方高坪|薛坪|長坪|龍坪|寺坪|洋坪|茅坪場|樟村坪|松木坪|茅坪|龍舟坪|榔坪|賀家坪|火燒坪|仁和坪|秦家坪|雙坪|六里坪|蒿坪|姚坪|竹坪|水坪|鄂坪|清坪|活龍坪|南坪|下坪|小坪|沙坪|白楊坪}}
+{{zh-der|坪數|坪場|地坪|停機坪|坪林|坪壩|建坪|阿坶坪|草坪|馬坪|卸甲坪|方高坪|薛坪|長坪|龍坪|寺坪|洋坪|茅坪場|樟村坪|松木坪|茅坪|龍舟坪|榔坪|賀家坪|火燒坪|仁和坪|秦家坪|雙坪|六里坪|蒿坪|姚坪|竹坪|水坪|鄂坪|清坪|活龍坪|南坪|下坪|小坪|沙坪|白楊坪|高坪|花坪}}
 
 ----
 
