--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -56,7 +56,7 @@ Cognate to English {{m|en|basis}}, from PIE via Ancient Greek.
 #*: when butter does refuse to '''come''' [i.e. to form]
 # {{lb|en|intransitive}} To take a position relative to something else in a [[sequence]].
 #: {{ux|en|Which letter '''comes''' before Y?&nbsp;&nbsp; Winter '''comes''' after autumn.}}
-# {{senseid|en|orgasm}}{{lb|en|intransitive|slang}} To achieve [[orgasm]]; to [[cum]]; to [[ejaculate]].
+# {{senseid|en|orgasm}}{{lb|en|intransitive|vulgar|slang}} To achieve [[orgasm]]; to [[cum]]; to [[ejaculate]].
 #* '''2004''', {{w|Alan Hollinghurst}}, ''{{w|The Line of Beauty}}'', Bloomsbury, 2005, Chapter 2:
 #*: Nick was more and more seriously absorbed, but then just before he '''came''' he had a brief vision of himself, as if the trees and bushes had rolled away and all the lights of London shone in on him: little Nick Guest from Barwick, Don and Dot Guest's boy, fucking a stranger in a Notting Hill garden at night.
 #* {{quote-book| year=2008| author={{w|Philip Roth}}| title={{w|Indignation (novel)|Indignation}}| passage= The sheer unimaginableness of '''coming''' into her mouth — of '''coming''' into anything other than the air or a tissue or a dirty sock — was an allurement too stupendous for a novice to forswear.}}
@@ -109,7 +109,7 @@ The phrase "dream come true" is a set phrase; the verb "come" in the sense "beco
 
 The collocations {{m|en|come with}} and {{m|en|come along}} mean {{m|en|accompany}}, used as "Do you want to come with me?" and "Do you want to come along?" In the Midwestern American dialect, "come with" can occur without a following object, as in "Do you want to come with?" In this dialect, "with" can also be used in this way with some other verbs, such as "take with". Examples of this may be found in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American Buffalo}}.''<ref>[http://positiveanymore.blogspot.com/2006/04/chicago-dialect.html Chicago Dialect]</ref> This objectless use is not permissible in other dialects.
 
-The meaning of ''to ejaculate'' is considered rude slang. Many style guides and editors recommend the spelling ''come'' for verb uses while strictly allowing the spelling {{m|en|cum}} for the noun. Both spellings are sometimes found in either the noun or verb sense, however. Others prefer to distinguish in formality, using ''come'' for any formal usage and ''cum'' only in slang, erotic or pornographic contexts.<ref>[http://www.glossophilia.org/?p=4925 Glossophilia]</ref>
+The meaning of ''to ejaculate'' is considered vulgar slang. Many style guides and editors recommend the spelling ''come'' for verb uses while strictly allowing the spelling {{m|en|cum}} for the noun. Both spellings are sometimes found in either the noun or verb sense, however. Others prefer to distinguish in formality, using ''come'' for any formal usage and ''cum'' only in slang, erotic or pornographic contexts.<ref>[http://www.glossophilia.org/?p=4925 Glossophilia]</ref>
 
 =====Antonyms=====
 * {{l|en|leave}}, {{l|en|go}}, {{l|en|depart}}, {{l|en|exit}}, {{l|en|withdraw}}, {{l|en|retreat}}, {{l|en|flee}}
@@ -419,11 +419,11 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 # {{lb|en|obsolete}} [[coming|Coming]], [[arrival]]; [[approach]].
 #* '''1869''', RD Blackmoore, ''Lorna Doone'', II:
 #*: “If we count three before the '''come''' of thee, thwacked thou art, and must go to the women.”
-# {{lb|en|slang}} [[semen|Semen]]
-# {{lb|en|slang}} Female [[ejaculatory]] [[discharge]].
+# {{lb|en|vulgar|slang}} [[semen|Semen]]
+# {{lb|en|vulgar|slang}} Female [[ejaculatory]] [[discharge]].
 
 =====Usage notes=====
-The meaning of ''semen or female ejaculatory discharge'' is considered rude slang. Many style guides and editors recommend the spelling ''come'' for verb uses while strictly allowing the spelling {{m|en|cum}} for the noun. Both spellings are sometimes found in either the noun or verb sense, however. Others prefer to distinguish in formality, using ''come'' for any formal usage and ''cum'' only in slang, erotic or pornographic contexts.<ref>[http://www.glossophilia.org/?p=4925 Glossophilia]</ref>
+The meaning of ''semen or female ejaculatory discharge'' is considered vulgar slang. Many style guides and editors recommend the spelling ''come'' for verb uses while strictly allowing the spelling {{m|en|cum}} for the noun. Both spellings are sometimes found in either the noun or verb sense, however. Others prefer to distinguish in formality, using ''come'' for any formal usage and ''cum'' only in slang, erotic or pornographic contexts.<ref>[http://www.glossophilia.org/?p=4925 Glossophilia]</ref>
 
 =====Derived terms=====
 * {{l|en|cum}}
