--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -94,7 +94,7 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 *: Sorani: {{t|ckb|پەردە|tr=perde}}
 * Kyrgyz: {{t|ky|парда|sc=Cyrl}}
 * Lao: {{t|lo|ຜ້າມ່ານ}}, {{t|lo|ເກີ້ງ}}, {{t|lo|ມ່ານ}}, {{t|lo|ວິສູດ}}, {{t|lo|ສາກ}}, {{t+|lo|ຜ້າກັ້ງ}}
-* Latin: {{t|la|plagula|f}}
+* Latin: {{t|la|plagula|f}}, {{t|la|aulaeum|n}}
 * Latvian: {{t|lv|aizkars|m}}
 * Lithuanian: {{t|lt|užuolaida|f}}
 * Luxembourgish: {{t|lb|Rido|f}}
@@ -177,6 +177,7 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 * Japanese: {{t+|ja|幕|tr=[[まく]], maku}}, [[緞帳]] ([[どんちょう]], donchō) with vertical move, [[引き幕]]　([[ひきまく]] hikimaku) with horizontal move
 * Korean: {{t+|ko|커튼}}
 {{trans-mid}}
+* Latin: {{t|la|stīparium|n}}
 * Macedonian: {{t|mk|кули́са|f}}
 * Persian: {{t+|fa|پرده|tr=parde}}
 * Polish: {{t+|pl|kurtyna|f}}
