--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -19,7 +19,9 @@
 Originally {{och-l|曐}}, which is a {{Han compound|ls=psc|nocap=1|晶|生|c1=s|c2=p|t1=twinkling stars}}.
 
 ===Etymology===
-Possibly cognate with {{och-l|清|clear}} ({{zh-ref|Schuessler, 2007}}), in turn from {{inh|zh|sit-pro|*(t)s(j)aŋ||clear; pure; clean}}.
+{{zh-ref|Baxter and Sagart (2014)}} reconstructs the {{cog|och|-}} as {{m|und|*s-tsʰˤeŋ}}, which can be analysed as a verbal root {{m|und|*tsʰˤeŋ||bright}} with a prefix {{m|und|*s-}}. This reconstruction accounts for the Min initial ''*tsh-'' and the use of the character to write the word {{och-l|晴|tr=*N-tsʰeŋ}}.
+
+Possibly related to {{och-l|清|clear}} ({{zh-ref|Schuessler, 2007}}; {{zh-ref|Baxter and Sagart, 2014}}), in turn from {{inh|zh|sit-pro|*(t)s(j)aŋ||clear; pure; clean}}.
 
 Proto-{{w|Kiranti languages|Kiranti}} {{m|und|*saŋ||star}} either develops from a parallel {{cog|sit}} root ({{zh-ref|Schuessler, 2007}}) or derives from {{cog|sit-pro|*s-kar||star}} (STEDT).
 
