--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -243,3 +243,20 @@ Of either {{inh|zh|sit-pro|-}} origin, compare {{cog|bo|tr=mdangs|t=facial color
 {{head|rys|noun|hiragana|あかりぃ|romaji|akarï}}
 
 # [[light]]
+
+----
+
+==Yonaguni==
+
+===Kanji===
+{{head|yoi|kanji}}
+
+* {{ja-readings|kun=[[あがい]] ([[明がい]], agai)}}
+
+===Pronunciation===
+* {{IPA|/aɡai/|lang=yoi}}
+
+===Noun===
+{{head|yoi|noun|hiragana|あがい|romaji|agai}}
+
+# [[light]]
