demote intj <pull#51359698>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -12,11 +12,6 @@ From {{inh|en|enm|pullen}}, from {{inh|en|ang|pullian|t=to pull, draw, tug, pluc
 * {{hyphenation|pull|lang=en}}
 * {{rhymes|ʊl|lang=en}}
 
-===Interjection===
-{{en-interj|head=pull!}}
-
-# {{lb|en|sports}} {{non-gloss definition|Command used by a target shooter to request that the target be released/launched.}}
-
 ===Noun===
 {{en-noun|~}}
 
@@ -381,6 +376,11 @@ From {{inh|en|enm|pullen}}, from {{inh|en|ang|pullian|t=to pull, draw, tug, pluc
 {{trans-mid}}
 * French: {{t+|fr|tirer un coup}}
 {{trans-bottom}}
+
+===Interjection===
+{{en-interj}}
+
+# {{lb|en|sports}} {{non-gloss definition|Command used by a target shooter to request that the target be released/launched.}}
 
 [[Category:English basic words]]
 [[Category:en:Gun sports]]
