--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -337,7 +337,7 @@ Compare {{cog|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}}), from {{d
 * Spanish: {{t+|es|mantequilla|f}}, {{t+|es|manteca|f}} {{qualifier|Argentina, Paraguay, Uruguay}}
 * Swahili: {{t+|sw|siagi}}
 * Swedish: {{t+|sv|smör|n}}
-* Syriac, Classical: {{t|syc|ܚܐܘܬܐ|f|tr=ḥeˀwṯā|sc=Syrc}}
+* Classical Syriac: {{t|syc|ܚܐܘܬܐ|f|tr=ḥeˀwṯā|sc=Syrc}}
 * Tagalog: {{t|tl|mantikilya}}
 * Tajik: {{t+|tg|равған}}, {{t|tg|равғани зард}}
 * Tamil: {{t+|ta|வெண்ணெய்}}
