--- a/en/倧/倧.11038.wikitext
+++ b/en/倧/倧.11038.wikitext
@@ -9,12 +9,23 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=jung1}}
+===Pronunciation===
+{{zh-pron
+|m=zōng
+|c=zung1
+|mc=y
+|oc=y
+|ma=
+|cat=
+}}
 
-# {{defn|lang=yue|sort=人08}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -36,12 +47,3 @@
 {{ko-hanja|hangeul=종|rv=jong|mr=chong}}
 
 # {{defn|lang=ko|sort=人08}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[zōng]] ([[zong1]])|wg=tsung<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=人08}}
