--- a/en/倰/倰.11058.wikitext
+++ b/en/倰/倰.11058.wikitext
@@ -9,6 +9,26 @@
 
 ----
 
+==Chinese==
+{{zh-forms}}
+
+===Pronunciation===
+{{zh-pron
+|m=léng
+|c=ling4,ling6
+|mc=y
+|oc=y
+|ma=
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -27,12 +47,3 @@
 {{ko-hanja|hangeul=릉|rv=reung|mr=rŭng}}
 
 # {{defn|lang=ko|sort=人08}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[léng]] ([[leng2]])|wg=leng<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=人08}}
