--- a/en/倿/倿.11085.wikitext
+++ b/en/倿/倿.11085.wikitext
@@ -9,9 +9,20 @@
 
 ----
 
-==Mandarin==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{cmn-hanzi|pin=[[qie]]|wg=ch'ieh}}
+===Pronunciation===
+{{zh-pron
+|m=nìng
+|c=ning6
+|mc=
+|oc=
+|ma=
+|cat=
+}}
 
-# {{defn|lang=cmn|sort=人08}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
