--- a/en/偀/偀.11086.wikitext
+++ b/en/偀/偀.11086.wikitext
@@ -9,18 +9,20 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=ying1}}
+===Pronunciation===
+{{zh-pron
+|m=yīng
+|c=jing1
+|mc=
+|oc=
+|ma=
+|cat=
+}}
 
-# {{defn|lang=yue|sort=人09}}
+===Definitions===
+{{zh-hanzi}}
 
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[yīng]] ([[ying1]])|wg=ying<sup>1</sup>}}
-
-# A person from England
+# a [[person]] from [[England]]
