--- a/en/偀/偀.11086.wikitext
+++ b/en/偀/偀.11086.wikitext
@@ -10,19 +10,4 @@
 ----
 
 ==Chinese==
-{{zh-forms}}
-
-===Pronunciation===
-{{zh-pron
-|m=yīng
-|c=jing1
-|mc=
-|oc=
-|ma=
-|cat=
-}}
-
-===Definitions===
-{{zh-hanzi}}
-
-# a [[person]] from [[England]]
+{{zh-see|英|a}}
