--- a/en/偂/偂.11088.wikitext
+++ b/en/偂/偂.11088.wikitext
@@ -9,6 +9,26 @@
 
 ----
 
+==Chinese==
+{{zh-forms}}
+
+===Pronunciation===
+{{zh-pron
+|m=qián
+|c=cin4
+|mc=
+|oc=
+|ma=
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -18,12 +38,3 @@
 
 ====Readings====
 * {{ja-readings|on=[[せん]] (sen)|kun=[[すすむ]] (susumu)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[jiān]] ([[jian1]])|wg=chien<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
