--- a/en/偂/偂.11088.wikitext
+++ b/en/偂/偂.11088.wikitext
@@ -10,22 +10,7 @@
 ----
 
 ==Chinese==
-{{zh-forms}}
-
-===Pronunciation===
-{{zh-pron
-|m=qián
-|c=cin4
-|mc=
-|oc=
-|ma=
-|cat=
-}}
-
-===Definitions===
-{{zh-hanzi}}
-
-# {{rfdef|lang=zh}}
+{{zh-see|前|v}}
 
 ----
 
