--- a/en/偄/偄.11090.wikitext
+++ b/en/偄/偄.11090.wikitext
@@ -11,6 +11,26 @@
 
 ----
 
+==Chinese==
+{{zh-forms}}
+
+===Pronunciation===
+{{zh-pron
+|m=ruǎn
+|c=jyun5
+|mc=y
+|oc=y
+|ma=
+|cat=a
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# [[weak]]
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -29,12 +49,3 @@
 {{ko-hanja|hangeul=[[난]], [[연]]|rv=nan, yeon|mr=nan, yŏn}}
 
 # {{defn|lang=ko|sort=人09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[nuàn]] ([[nuan4]])|wg=nuan<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
