--- a/en/偍/偍.11101.wikitext
+++ b/en/偍/偍.11101.wikitext
@@ -9,12 +9,23 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=tai4}}
+===Pronunciation===
+{{zh-pron
+|m=tí
+|c=tai4
+|mc=
+|oc=
+|ma=
+|cat=
+}}
 
-# {{defn|lang=yue|sort=人09}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -27,12 +38,3 @@
 
 ====Readings====
 * {{ja-readings|on=[[てい]] (tei), [[だい]] (dai)|kun=[[ゆるやか]] (yuruyaka)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[tí]] ([[ti2]])|wg=t'i<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
