--- a/en/偖/偖.11110.wikitext
+++ b/en/偖/偖.11110.wikitext
@@ -13,6 +13,28 @@
 
 ----
 
+==Chinese==
+{{zh-forms}}
+
+===Pronunciation===
+{{zh-pron
+|m=chě
+|c=ce2
+|mc=
+|oc=
+|ma=
+|cat=v
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# [[rip]] up, [[tear down]]
+# [[raise]]
+# [[haul]]
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -35,15 +57,6 @@
 {{ko-hanja|hangeul=차|rv=cha|mr=ch'a}}
 
 # {{defn|lang=ko|sort=人09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[chě]] ([[che3]])|wg=ch'e<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
 
 ----
 
