--- a/en/偗/偗.11111.wikitext
+++ b/en/偗/偗.11111.wikitext
@@ -9,6 +9,26 @@
 
 ----
 
+==Chinese==
+{{zh-forms}}
+
+===Pronunciation===
+{{zh-pron
+|m=shěng
+|c=
+|mc=
+|oc=
+|ma=
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -18,12 +38,3 @@
 
 ====Readings====
 * {{ja-readings|on=[[せい]] (sei), [[しゃう]] (shau)|kun=[[まつすぐなさま]] (matsusugunasama)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[shěng]] ([[sheng3]])|wg=sheng<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
