--- a/en/偡/偡.11121.wikitext
+++ b/en/偡/偡.11121.wikitext
@@ -9,12 +9,23 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[zaam6]]|y=jaam6}}
+===Pronunciation===
+{{zh-pron
+|m=zhàn
+|c=zaam6
+|mc=y
+|oc=y
+|ma=
+|cat=
+}}
 
-# {{defn|lang=yue|sort=人09}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -27,12 +38,3 @@
 
 ====Readings====
 * {{ja-readings|on=[[たん]] (tan), [[だ]] (da)|kun=[[そろってすすむ]] (sorottesusumu), [[ととのったさま]] (totonottasama)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[zhàn]] ([[zhan4]])|wg=chan<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
