--- a/en/偡/偡.11121.wikitext
+++ b/en/偡/偡.11121.wikitext
@@ -25,7 +25,7 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|lang=zh}}
+# {{lb|zh|appearance}} [[orderly]], [[neat]], [[even]], [[tidy]]
 
 ----
 
