--- a/en/偤/偤.11124.wikitext
+++ b/en/偤/偤.11124.wikitext
@@ -9,6 +9,26 @@
 
 ----
 
+==Chinese==
+{{zh-forms}}
+
+===Pronunciation===
+{{zh-pron
+|m=yóu
+|c=jau4
+|mc=y
+|oc=y
+|ma=
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -18,12 +38,3 @@
 
 ====Readings====
 * {{ja-readings|on=[[ゆ]] (yu)|kun=[[はべる]] (haberu)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[yǒu]] ([[you3]])|wg=yu<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
