--- a/en/偧/偧.11127.wikitext
+++ b/en/偧/偧.11127.wikitext
@@ -9,6 +9,26 @@
 
 ----
 
+==Chinese==
+{{zh-forms}}
+
+===Pronunciation===
+{{zh-pron
+|m=zhā
+|c=zaa3
+|mc=
+|oc=
+|ma=
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -18,12 +38,3 @@
 
 ====Readings====
 * {{ja-readings|on=[[た]] (ta)|kun=[[はる]] (haru)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[zhā]] ([[zha1]])|wg=cha<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
