--- a/en/偹/偹.11145.wikitext
+++ b/en/偹/偹.11145.wikitext
@@ -12,6 +12,26 @@
 
 ----
 
+==Chinese==
+{{zh-forms}}
+
+===Pronunciation===
+{{zh-pron
+|m=bèi
+|c=bei6
+|mc=
+|oc=
+|ma=
+|cat=v
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# [[prepare]], [[ready]], [[perfect]]
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -30,12 +50,3 @@
 {{ko-hanja|hangeul=비|rv=bi|mr=pi}}
 
 # {{defn|lang=ko|sort=人09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[bèi]] ([[bei4]])|wg=pei<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
