--- a/en/偼/偼.11148.wikitext
+++ b/en/偼/偼.11148.wikitext
@@ -4,17 +4,10 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=21281|canj=OYSO|ids=⿰亻⿳卜⿻コ一龰}}
 
-# (variant of [[倢]]) [[beautiful]], [[handsome]]
-# [[woman]]
-
 ====References====
 * {{Han ref|kx=0112.071|dkj=00925|hdz=10189.011|uh=507C|ud=20604}}
 
 ----
 
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[jié]] ([[jie2]])|wg=chieh<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
+==Chinese==
+{{zh-see|倢|v}}
