--- a/en/偼/偼.11148.wikitext
+++ b/en/偼/偼.11148.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=09|sn=11|four=21281|canj=OYSO|ids=⿰亻⿳卜⿻コ一龰}}
+{{Han char|rn=9|rad=人|as=09|sn=11|four=21281|canj=OYSO|ids=⿰亻⿳⺊彐龰}}
 
 ====References====
 * {{Han ref|kx=0112.071|dkj=00925|hdz=10189.011|uh=507C|ud=20604}}
