--- a/en/傆/傆.11158.wikitext
+++ b/en/傆/傆.11158.wikitext
@@ -24,6 +24,6 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[páng]] ([[pang2]]), [[yuàn]] ([[yuan4]])|wg=p'ang<sup>2</sup>, yüan<sup>4</sup>}}
+{{cmn-hanzi|pin=[[yuàn]] ([[yuan4]])|wg=yüan<sup>4</sup>}}
 
 # {{defn|lang=cmn|sort=人10}}
