--- a/en/傆/傆.11158.wikitext
+++ b/en/傆/傆.11158.wikitext
@@ -9,6 +9,26 @@
 
 ----
 
+==Chinese==
+{{zh-forms}}
+
+===Pronunciation===
+{{zh-pron
+|m=yuàn
+|c=jyun6
+|mc=y
+|oc=y
+|ma=
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -18,12 +38,3 @@
 
 ====Readings====
 * {{ja-readings|on=[[げん]] (gen), [[がん]] (gan), [[かん]] (kan)|kun=[[こざかしい]] (kozakashii)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[yuàn]] ([[yuan4]])|wg=yüan<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=人10}}
