--- a/en/傇/傇.11159.wikitext
+++ b/en/傇/傇.11159.wikitext
@@ -11,6 +11,26 @@
 
 ----
 
+==Chinese==
+{{zh-forms}}
+
+===Pronunciation===
+{{zh-pron
+|m=rǒng
+|c=jung5
+|mc=
+|oc=
+|ma=
+|cat=n
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# the [[masses]], the [[people]] [[at large]]
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -20,12 +40,3 @@
 
 ====Readings====
 * {{ja-readings|on=[[じょう]] (jō), [[にゅ]] (nyu)|kun=[[おおい]] (ooi)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[rǒng]] ([[rong3]])|wg=jung<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=人10}}
