--- a/en/傊/傊.11162.wikitext
+++ b/en/傊/傊.11162.wikitext
@@ -9,6 +9,26 @@
 
 ----
 
+==Chinese==
+{{zh-forms}}
+
+===Pronunciation===
+{{zh-pron
+|m=yùn
+|c=wan6
+|mc=
+|oc=
+|ma=
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -18,12 +38,3 @@
 
 ====Readings====
 * {{ja-readings|on=[[いん]] (in)|kun=[[まさる]] (masaru), [[ゆたか]] (yutaka)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[yǔn]] ([[yun3]])|wg=yün<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=人10}}
