--- a/en/傎/傎.11166.wikitext
+++ b/en/傎/傎.11166.wikitext
@@ -11,12 +11,23 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=din1}}
+===Pronunciation===
+{{zh-pron
+|m=diān
+|c=din1
+|mc=y
+|oc=y
+|ma=
+|cat=v
+}}
 
-# {{defn|lang=yue|sort=人10}}
+===Definitions===
+{{zh-hanzi}}
+
+# [[topple]]
 
 ----
 
@@ -38,12 +49,3 @@
 {{ko-hanja|hangeul=[[전]]|rv=jeon|mr=chŏn}}
 
 # {{defn|lang=ko|sort=人10}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[diān]] ([[dian1]]), [[xí]] ([[xi2]]), [[xì]] ([[xi4]])|wg=tien<sup>1</sup>, hsi<sup>2</sup>, hsi<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=人10}}
