converted "Mandarin" section into unified "Chinese" section; added "c=" (Cantonese) reading "hou6" to /zh-pron/ template <傐#51363089>

--- a/en/傐/傐.11168.wikitext
+++ b/en/傐/傐.11168.wikitext
@@ -11,6 +11,26 @@
 
 ----
 
+==Chinese==
+{{zh-forms}}
+
+===Pronunciation===
+{{zh-pron
+|m=hào
+|c=hou6
+|mc=
+|oc=
+|ma=
+|cat=pn
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# an [[ancient]] [[placename]] in northern [[China]]
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -20,12 +40,3 @@
 
 ====Readings====
 * {{ja-readings|on=[[こう]] (kō), [[ごう]] (gō)|kun=}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[hào]] ([[hao4]])|wg=hao<sup>4</sup>}}
-
-# an ancient northern Chinese place name
