--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -194,6 +194,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 *: Kurmanji: {{t+|ku|Almanya|f}}
 * Kven: {{t|fkv|Tuiska}}
 * Kyrgyz: {{t+|ky|Германия|sc=Cyrl}}
+* Ladin: {{t-needed|lld}}
 * Ladino: {{t|lad|Almania}}
 * Lao: {{t|lo|ເຢັຽລະມັນ}}, {{t|lo|ເຢຍຣະມັນ}}, {{t|lo|ເຢັຍຣະມັນ}}
 * Latgalian: {{t|ltg|Vuoceja|f}}
@@ -294,6 +295,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Vietnamese: {{t+|vi|Đức}} ({{t|vi|德|sc=Hani}})
 * Vilamovian: {{t|wym|Daojćłaond}}
 * Volapük: {{t+|vo|Deutän}}, {{t|vo|Deut}}  {{qualifier|obsolete}}
+* Votic: {{t-needed|vot}}
 * Võro: {{t|vro|S'aksamaa}}
 * Wallisian: {{t|wls|Siamani}}
 * Walloon: {{t+|wa|Almagne|f}}
