--- a/en/傕/傕.11175.wikitext
+++ b/en/傕/傕.11175.wikitext
@@ -11,12 +11,23 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=gok3|y=gok3}}
+===Pronunciation===
+{{zh-pron
+|m=jué
+|c=gok3
+|mc=y
+|oc=y
+|ma=
+|cat=pn
+}}
 
-# {{defn|lang=yue|sort=人10}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -38,15 +49,6 @@
 {{ko-hanja|hangeul=각|rv=gak|mr=kak}}
 
 # {{defn|lang=ko|sort=人10}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[jué]] ([[jue2]])|wg=chüeh<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=人10}}
 
 ----
 
