--- a/en/慃/慃.15702.wikitext
+++ b/en/慃/慃.15702.wikitext
@@ -28,7 +28,9 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# ({{zh-only|慃𢞡}}) [[perverse]] (behavior)
+# ({{zh-only|慃𢞡}}) [[disagreeable]] (character)
+
 ====References====
 * (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
 
