--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -266,10 +266,11 @@ From {{der|en|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{der|en|gem}
 * French: {{t+|fr|brique}}
 * Galician: {{t-needed|gl}}
 * German: {{t+|de|Ziegel|m}}
+{{trans-mid}}
 * Greek:
 *: Ancient: {{t|grc|πλίνθος|f}}
-{{trans-mid}}
 * Greek: {{t+|el|τούβλο|n}}
+* Hungarian: {{t+|hu|tégla}}
 * Icelandic: {{t+|is|múrsteinn|m}}, {{t|is|byggingarklossar|m-p}}, {{t|is|byggingarkubbar|n-p}}
 * Irish: {{t|ga|bríce|m}}
 * Japanese: {{t+|ja|煉瓦|tr=れんが, renga}}
@@ -292,6 +293,7 @@ From {{der|en|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{der|en|gem}
 * Dutch: {{t+|nl|kanjer|m}}, {{t+|nl|toeverlaat|m}}, {{t+|nl|beschermengel|m}}
 * Finnish: {{t+|fi|apu}}
 * French: {{t+|fr|soutien|m}}
+* Hungarian: {{t|hu|rendes fickó}}
 {{trans-mid}}
 * Icelandic: {{t|is|ágætis manneskja|f}}, {{t|is|perla af manni|f}}, {{t|is|fyrirtaks manneskja|f}}
 * Mandarin: {{t-check|cmn|好心腸|alt=好心腸的|sc=Hani}}, {{t-check|cmn|好心肠|alt=好心肠的|tr=hǎo xīn cháng de|sc=Hani}}
