/* Derived terms */ <saffron#51380200>

--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -56,7 +56,8 @@ The distinction between the ''plant'' and ''spice'' senses is often blurred.
 |{{l|en|saffron wood}}
 |{{l|en|saffron yellow}}
 |{{l|en|saffrony}}
-|{{l|en|saffronlike}}}}
+|{{l|en|saffronlike}}
+|{{vern|saffron spike}} ({{taxlink|Aphelandra squarrosa|species|noshow=1}})}}
 
 ====Related terms====
 {{rel2|lang=en|safranine|safflower}}
