--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -46,8 +46,8 @@ The distinction between the ''plant'' and ''spice'' senses is often blurred.
 ====Derived terms====
 {{der3|lang=en
 |{{vern|bastard saffron}} ({{taxlink|Cassine peragua|species|noshow=1}})
-|{{vern|dyer's saffron}} (''[[Carthamus tinctorius]]'')
-|{{l|en|meadow saffron}} (''[[Colchicum autumnale]]'')
+|{{vern|dyer's saffron}} (''{{l|mul|Carthamus tinctorius}}'''')
+|{{l|en|meadow saffron}} (''{{l|mul|Colchicum autumnale}}'')
 |{{vern|saffron finch}} ({{taxlink|Sicalis flaveola|species|noshow=1}})
 |{{l|en|saffronize}}
 |{{l|en|saffronization}}
