/* Derived terms */ <saffron#51380236>

--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -46,9 +46,13 @@ The distinction between the ''plant'' and ''spice'' senses is often blurred.
 ====Derived terms====
 {{der3|lang=en
 |{{vern|African saffron}} ({{taxlink|Lyperia crocea|species|ver=190129}})
+|{{vern|American saffron}} (''{{l|mul|Carthamus tinctorius}}'')
 |{{vern|bastard saffron}} ({{taxlink|Cassine peragua|species|noshow=1}})
 |{{vern|dyer's saffron}} (''{{l|mul|Carthamus tinctorius}}'')
+|{{vern|false saffron}} (''{{l|mul|Carthamus tinctorius}}'')
+|{{vern|Indian saffron}} (''{{l|mul|Carthamus tinctorius}}'', {{taxlink|Curcuma zedoaria|species|ver=190129}})
 |{{l|en|meadow saffron}} (''{{l|mul|Colchicum autumnale}}'')
+|{{vern|Persian saffron}} (''{{l|mul|Crocus sativus}}'')
 |{{vern|saffron finch}} ({{taxlink|Sicalis flaveola|species|noshow=1}})
 |{{l|en|saffronize}}
 |{{l|en|saffronization}}
@@ -58,7 +62,9 @@ The distinction between the ''plant'' and ''spice'' senses is often blurred.
 |{{l|en|saffron yellow}}
 |{{l|en|saffrony}}
 |{{l|en|saffronlike}}
-|{{vern|saffron spike}} ({{taxlink|Aphelandra squarrosa|species|noshow=1}})}}
+|{{vern|saffron spike}} ({{taxlink|Aphelandra squarrosa|species|noshow=1}})
+|{{vern|sheep saffron}} (''{{l|mul|Rumex acetosella}}'')
+|{{vern|thistle saffron}} (''{{l|mul|Carthamus tinctorius}}'')}}
 
 ====Related terms====
 {{rel2|lang=en|safranine|safflower}}
