--- a/en/映/映.16968.wikitext
+++ b/en/映/映.16968.wikitext
@@ -89,6 +89,13 @@ The ''[[漢音#Japanese|kan'on]]'' pronunciation, so likely a later borrowing.
 # a [[reflection]]; to [[reflect]]
 # a [[projection]]; to [[project]]
 
+====Derived terms====
+{{der-top}}
+* {{ja-r|映画|えいが}}: a [[movie]]
+* {{ja-r|映写|えいしゃ}}: a [[projection]]; to [[project]] something {{qualifier|an image}}
+* {{ja-r|映像|えいぞう}}: an [[image]] {{qualifier|especially one on a screen or in one's mind}}, a [[reflection]]
+{{der-bottom}}
+
 ----
 
 ==Korean==
