--- a/en/愈/愈.15644.wikitext
+++ b/en/愈/愈.15644.wikitext
@@ -50,7 +50,7 @@
 # {{defn|lang=ja|sort=心09}}
 
 ====Readings====
-* {{ja-readings|on=[[ゆ]] (yu)|kun=[[まさる]] (masaru), [[いよいよ]] (iyoiyo)}}
+* {{ja-readings|on=ゆ|kun=まさる,いよいよ}}
 
 ----
 
