/* Pronunciation */ edited using [[wikt:User:Dixtosa/AjaxEdit.js|AjaxEdit]] <惜#51407820>

--- a/en/惜/惜.15601.wikitext
+++ b/en/惜/惜.15601.wikitext
@@ -23,7 +23,7 @@ Note that 昔 has meaning of “past, ending”, hence connotations of “feelin
 |m=惜
 |c=sik1,sek3
 |c_note=sik1 - literary; sek3 - vernacular
-|h=pfs=siak/sit;gd=xiag5/xid5;
+|h=pfs=siak/sit;gd=xiag5/xid5
 |h_note=Sixian: siak - vernacular; sit - literary
 Meixian: xiag5 - vernacular; xid5 - literary
 |md=sék
