--- a/en/旭/旭.16917.wikitext
+++ b/en/旭/旭.16917.wikitext
@@ -62,9 +62,8 @@
 }}
 
 ===Noun===
-{{ja-noun|あさひ}}
-
-# {{alternative spelling of|朝日|lang=ja}}
+{{ja-kanjitab|あさひ|yomi=k}}
+{{ja-see|朝日}}
 
 ===Proper noun===
 {{ja-pos|あきら|proper}}
