t+pal:[[𐭪𐭥𐭬𐭡]] ([[WT:EDIT|Assisted]]) <stomach#51443959>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -175,6 +175,7 @@ From {{inh|en|enm|stomak}}, from {{der|en|fro|estomac}}, from {{der|en|la|stomac
 * Manchu: {{t|mnc|ᡤᡠᠸᡝᠵᡳᡥᡝ|tr=guwejihe}}
 * Mandinka: {{t|mnk|konoo}}
 * Marathi: {{t|mr|जठर|sc=Deva}}
+* Middle Persian: {{t|pal|𐭪𐭥𐭬𐭡|tr=kumb}}
 * Mongolian: {{t+|mn|гэдэс}}
 * Navajo: {{t|nv|abid|sc=Latn}}
 * Nepali: {{t-needed|ne}}
