/* Derived terms */ <bridge#51462840>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -79,6 +79,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 |drawbridge
 |footbridge
 |Hebden Bridge
+|humpback bridge
 |ice bridge
 |Ivybridge
 |Kelvin bridge
