--- a/en/昏/昏.16951.wikitext
+++ b/en/昏/昏.16951.wikitext
@@ -19,7 +19,7 @@
 {{zh-pron
 |m=hūn
 |c=fan1
-|h=pfs=fûn
+|h=pfs=fûn;gd=fun1
 |mn=hun/qz,tw,xm:hng/zz:huiⁿ
 |mn_note=hun - literary; hng/huiⁿ - vernacular
 |mn-t=hung1
