--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -3,7 +3,7 @@
 {{wikipedia}}
 
 ===Alternative forms===
-* {{sense|abbreviated}} ''See'' '''[[etc.]]'''
+* {{sense|abbreviated}} ''See'' '''{{l|en|etc.}}'''
 * {{sense|dated}} {{l|en|& cetera}}
 * {{sense|obsolete}} {{l|en|et caetera}}, {{l|en|et cætera}}
 * {{sense|proscribed}} {{l|en|etcetera}}
