--- a/en/旭/旭.16917.wikitext
+++ b/en/旭/旭.16917.wikitext
@@ -73,6 +73,7 @@
 {{ja-pos|あさひ|proper}}
 
 # a place name, such as that of Asahi City in [[Chiba]] Prefecture
+# {{surname|lang=ja|A=a|nodot=1|sort=あさひ}}
 
 [[Category:ja:Cities|あさひ]]
 
