/* Verb */ # {{lb|en|transitive}} To [[roughen]] a [[brick]] [[wall]] with a [[pick]] so as to hold [[plaster]]. # {{lb|en|transitive}} To [[pierce]] folded [[sheet]]s, near their back edges, for the passage of [[thread]] or [[wire]]. <stab#51641429>

--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -124,6 +124,8 @@ Supposed by some to derive from {{der|en|gd|stob||to prick, to prod, to push, to
 #: {{ux|en|The snow from the blizzard was '''stabbing''' at my face as I skied down the mountain.}}
 # {{lb|en|transitive|figurative}} To injure secretly or by malicious falsehood or slander.
 #: {{ux|en|to '''stab''' a person's reputation}}
+# {{lb|en|transitive}} To [[roughen]] a [[brick]] [[wall]] with a [[pick]] so as to hold [[plaster]].
+# {{lb|en|transitive}} To [[pierce]] folded [[sheet]]s, near their back edges, for the passage of [[thread]] or [[wire]].
 
 ====Derived terms====
 * {{l|en|stabbee}}
