--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -33,7 +33,7 @@ Proto-{{w|Kiranti languages|Kiranti}} {{m|und|*saŋ||star}} either develops from
 |c-t=lhiang1-4,lhen1
 |c-t_note=lhiang1-4 - vernacular; lhen1 - literary
 |g=
-|h=pfs=sên
+|h=pfs=sên;gd=sên1
 |j=
 |mb=sáing
 |md=sĭng
