--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -28,20 +28,23 @@ Proto-{{w|Kiranti languages|Kiranti}} {{m|und|*saŋ||star}} either develops from
 ===Pronunciation===
 {{zh-pron
 |m=xīng,er=y
-|m-s=
+|m-s=xin1
 |c=sing1,seng1
+|c_note=sing1 - literary; seng1 - vernacular (uncommon)
 |c-t=lhiang1-4,lhen1
 |c-t_note=lhiang1-4 - vernacular; lhen1 - literary
-|g=
+|g=xiang1/xin1
+|g_note=xiang1 - vernacular; xin1 - literary
 |h=pfs=sên;gd=sên1
-|j=
+|j=xing1/xi1
+|j_note=xing1 - literary; xi1 - vernacular (limited, e.g. {{l|zh|星宿}})
 |mb=sáing
 |md=sĭng
 |mn=xm,qz,lk,sx,tp,km,mg,hc:chhiⁿ/zz,yl,tn,kh,tc,pn:chheⁿ/seng
 |mn_note=chhiⁿ/chheⁿ - vernacular; seng - literary
 |mn-t=cên1
 |w=1xin
-|x=
+|x=sin1
 |mc=y
 |oc=y
 |ma=Zh-xing.ogg
