--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -191,9 +191,10 @@ From {{inh|en|enm|cote}}, {{m|enm|coate}}, {{m|enm|cotte}}, from {{der|en|fro|co
 ===Verb===
 {{en-verb}}
 
-# To cover with a coat of some material
-#: {{ux|en|One can buy '''coated''' frying pans, which are much easier to wash up than normal ones.}}
-# To cover as a coat.
+# {{lb|en|transitive}} To cover with a coating of some material.
+#: {{ux|en|The frying pan was '''coated''' with a layer of non-stick material, making it easier to wash.}}
+# {{lb|en|transitive}} To cover like a coat.
+# {{lb|en|transitive|archaic}} To [[clothe]].
 
 ====Translations====
 {{trans-top|to cover with a coat of some material}}
