/* Noun */ usex <play#51669057>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -488,7 +488,8 @@ The noun is from {{inh|en|enm|pleye}}, from {{inh|en|ang|plæġ}}, {{m|ang|pleġ
 #*: She was fond of all boys' '''plays''', and greatly preferred cricket {{...}} to dolls {{...}}
 # {{lb|en|uncountable}} Similar activity, in young animals, as they explore their environment and learn new skills.
 # {{lb|en|uncountable|ethology}} "Repeated, incompletely functional behavior differing from more serious versions ..., and initiated voluntarily when ... in a low-stress setting."
-# The conduct, or course of a game.
+# The conduct, or course, of a game.
+#: ''After the rain break, '''play''' resumed at 3 o'clock.''
 # {{lb|en|countable}} An individual's performance in a sport or game.
 # {{lb|en|countable}} A segment of action within a game. 
 #: ''That was a great '''play''' by the Mudchester Rovers forward.''
