/* Derived terms */ [[catch me]] <catch#51697551>

--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -100,6 +100,7 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 |{{l|en|bycatch}}
 |{{l|en|catch fence}}
 |{{l|en|catchful}}
+|{{l|en|catch me}}
 |{{l|en|catch of the day}}
 |{{l|en|catch one's death}}
 |{{l|en|catch some rays}}
