--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -20,7 +20,7 @@ From {{inh|en|enm|France}}, borrowed from {{der|en|frm|France}}, from {{der|en|f
 ===Proper noun===
 {{en-proper noun|Frances}}
 
-# {{senseid|en|Q142}}A [[country]] in Western Europe which borders [[Belgium]], [[Luxembourg]], [[Germany]], [[Switzerland]], [[Italy]], [[Monaco]], [[Andorra]] and [[Spain]]. Official name: [[French Republic]].
+# {{senseid|en|Q142}}The {{l|en|French Republic}}, a {{l|en|country}} in western {{l|en|Europe}} and member state of the {{l|en|European Union}} (since 1993), having {{l|en|Paris}} as its capital city, bounded by {{l|en|Belgium}}, {{l|en|Luxembourg}}, {{l|en|Germany}}, {{l|en|Switzerland}}, {{l|en|Italy}}, {{l|en|Monaco}}, {{l|en|Andorra}}{{,}} and {{l|en|Spain}}.
 #* '''1998''', Shanny Peer, ''France on Display: Peasants, Provincials, and Folklore'' {{ISBN|0791437108}}, page 2:
 #*: Although scholars have offered different chronologies and causalities for the move toward modernity, most have resolved the paradox of the two '''Frances''' by placing them in sequence: "diverse '''France''' gave way over time as modern centralized '''France''' gathered force."
 #* {{quote-journal
@@ -32,8 +32,11 @@ From {{inh|en|enm|France}}, borrowed from {{der|en|frm|France}}, from {{der|en|f
 |url=http://www.guardian.co.uk/world/2012/apr/23/francois-hollande-french-election
 |page=
 |passage=Hollande told cheering supporters in his rural fiefdom of Corrèze in south-west '''France''' that he was best-placed to lead '''France''' towards change, saying the vote marked a "rejection" of Sarkozy and a "sanction" against his five years in office.}}
-# {{surname|French|from=French}}
-#: {{w|Anatole France}}, a French poet, journalist, and novelist
+# {{surname|French|from=French|dot=,}} {{n-g|famously held by—}}
+## {{w|Anatole France}}, a French poet, journalist, and novelist.
+
+====Meronyms====
+* {{sense|country}} {{l|en|European Union}}, {{l|en|Europe}}
 
 ====Related terms====
 {{rel3|Franco-|francophobe|Francophone|Frankland|French|Frenchman|New France|Tour de France|lang=fr}}
