t+eu:[[{{t-needed}}]] t+vep:[[{{t-needed}}]] t+vot:[[{{t-needed}}]] t+fo:[[{{t-needed}}]] t-balance ([[WT:EDIT|Assisted]]) <speak#51709242>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -120,6 +120,7 @@ From {{inh|en|enm|speken|t=to speak}}, from {{inh|en|ang|specan|t=to speak}}, al
 * Avar: {{t-needed|av}}
 * Azerbaijani: {{t+|az|danışmaq}}
 * Bashkir: {{t|ba|һөйләшеү|sc=Cyrl}}, {{t|ba|гәпләшеү|sc=Cyrl}}
+* Basque: {{t-needed|eu}}
 * Belarusian: {{t+|be|гавары́ць|impf}}, {{t|be|сказа́ць|pf}}, {{t|be|размаўля́ць|impf|sc=Cyrl}}, {{t|be|размо́віць|pf|sc=Cyrl}}
 * Bengali: {{t|bn|বলা|sc=Beng}}
 * Bislama: {{t|bi|toktok}}
@@ -140,6 +141,7 @@ From {{inh|en|enm|speken|t=to speak}}, from {{inh|en|ang|specan|t=to speak}}, al
 * Egyptian: {{t-egy|ḏd|h=D:d}}
 * Esperanto: {{t+|eo|paroli}}
 * Estonian: {{t+|et|rääkima}}
+* Faroese: {{t-needed|fo}}
 * Finnish: {{t+|fi|puhua}}
 * French: {{t+|fr|parler}}
 *: Middle French: {{t|frm|parler}}
@@ -188,8 +190,8 @@ From {{inh|en|enm|speken|t=to speak}}, from {{inh|en|ang|specan|t=to speak}}, al
 * Mingrelian: {{t-needed|xmf}}
 * Mirandese: {{t|mwl|falar}}
 * Mongolian: {{t+|mn|ярих|sc=Cyrl}}
-* Nahuatl: {{t|nah|tlatoa}}
 {{trans-mid}}
+* Nahuatl: {{t|nah|tlatoa}}
 * Navajo: {{t|nv|yáshtiʼ}}
 * Neapolitan: {{t|nap|parlà}}
 * Nepali: {{t-needed|ne}}
@@ -261,8 +263,10 @@ From {{inh|en|enm|speken|t=to speak}}, from {{inh|en|ang|specan|t=to speak}}, al
 * Uyghur: {{t|ug|سۆزلىمەك|sc=ug-Arab}}, {{t|ug|ئېيتماق|sc=ug-Arab}}
 * Uzbek: {{t+|uz|gaplashmoq}}
 * Venetian: {{t+|vec|parlar}}
+* Veps: {{t-needed|vep}}
 * Vietnamese: {{t+|vi|nói}}
 * Volapük: {{t+|vo|spikön}}
+* Votic: {{t-needed|vot}}
 * Walloon: {{t+|wa|cåzer}}, {{t+|wa|divizer}}, {{t+|wa|djåzer}}, {{t+|wa|pårler}}
 * Welsh: {{t+|cy|siarad}}, {{t+|cy|llefaru}}
 * West Frisian: {{t|fy|sprekke}}
