/* Translations */ Added another Latin translation for this word. <branch#51709246>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -110,7 +110,7 @@ From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, borrowed fro
 * Kyrgyz: {{t+|ky|бутак|sc=Cyrl}}, {{t+|ky|шак|sc=Cyrl}}
 * Lao: {{t+|lo|ກິ່ງ}}, {{t|lo|ງ່າ}}
 * Latgalian: {{t|ltg|zors|m}}
-* Latin: {{t|la|rāmus}}, {{t|la|sūrus}}
+* Latin: {{t|la|rāmus}}, {{t|la|sūrus}}, {{t|la|termes|m}}
 * Latvian: {{t|lv|zars|m}}
 * Lithuanian: {{t+|lt|šaka|f}}
 * Low German: {{t|nds|Telg|m}}
