t+es:[[curva]] ([[WT:EDIT|Assisted]]) <curve#51732158>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -98,6 +98,7 @@ From {{der|en|la|curvus|t=bent, curved}}.
 * Persian: {{t+|fa|منحنی|tr=monhani}}
 * Portuguese: {{t+|pt|curva|f}}
 * Romanian: {{t+|ro|curbă|f}}
+* Spanish: {{t+|es|curva}}
 * Tagalog: {{t|tl|kilo}}, {{t|tl|guhit na kilo}}
 {{trans-bottom}}
 
