/* Translations */ Added Zealandic. <cut#51733983>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -690,6 +690,7 @@ Displaced native Middle English [[snithen]] (from Old English [[sniþan]]) (comp
 * ǃXóõ: {{t|nmn|gǂháá}}
 * Yiddish: {{t|yi|האַקן}}, {{t|yi|שנײַדן}}
 * Zazaki: {{t|zza|bırnayen}}, {{t|zza|birnayîş}}
+* Zealandic: {{t|zea|snieë}}
 {{trans-bottom}}
 
 {{trans-top|to divide with a sharp instrument}}
