t+vi:[[đến]] ([[WT:EDIT|Assisted]]) <come#51761239>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -301,7 +301,7 @@ The meaning of ''to ejaculate'' is considered vulgar slang. Many style guides an
 * Uyghur: {{t|ug|كەلمەك}}
 * Uzbek: {{t+|uz|kelmoq}}
 * Venetian: {{t+|vec|vegner}}
-* Vietnamese: {{t+|vi|lại}}
+* Vietnamese: {{t+|vi|lại}}, {{t+|vi|đến}}
 * Walloon: {{t+|wa|vni}}, {{t+|wa|vini}}
 * Welsh: {{t+|cy|dod}}
 * West Frisian: {{t+|fy|komme}}
