t+sat:[[ᱤᱡᱽᱨᱟᱭᱮᱞ]] ([[WT:EDIT|Assisted]]) <Israel#51780866>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -161,6 +161,7 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 * Russian: {{t+|ru|Изра́иль|m}}
 * Samogitian: {{t|sgs|Izraelės|m}}, {{t|sgs|Izraele Valstībė|f}}
 * Sanskrit: {{t|sa|इस्रेल}}, {{t|sa|इस्रेल}}
+* Santali: {{t|sat|ᱤᱡᱽᱨᱟᱭᱮᱞ}}
 * Scottish Gaelic: {{t|gd|Iosrael|f}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|Израел|m|sc=Cyrl}}
