--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -2,9 +2,9 @@
 
 ===Pronunciation===
 * {{enPR|fīt}}, {{IPA|/faɪt/|lang=en}}
-* {{audio|En-uk-fight.ogg|Audio (UK)|lang=en}}
+* {{audio|En-uk-fight.ogg|Audio (RP)|lang=en}}
 * {{a|US|Canada}} {{IPA|[fʌɪt]|lang=en}}
-* {{audio|En-us-fight.ogg|Audio (US)|lang=en}}
+* {{audio|En-us-fight.ogg|Audio (GA)|lang=en}}
 * {{audio|LL-Q1860 (eng)-Nattes à chat-fight.wav|Audio|lang=en}}
 * {{rhymes|aɪt|lang=en}}
 
