t+dng:[[дўзы]] t+wuu:[[胃]] t+cdo:[[胃]] t+hak:[[胃]] t+nan:[[胃]] t-balance ([[WT:EDIT|Assisted]]) <stomach#51790908>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -110,7 +110,12 @@ From {{inh|en|enm|stomak}}, from {{der|en|fro|estomac}}, from {{der|en|la|stomac
 * Chichewa: {{t-needed|ny}}
 * Chinese:
 *: Cantonese: {{t|yue|胃|tr=wai6|sc=Hant}}
+*: Dungan: {{t|dng|дўзы}}
+*: Hakka: {{t|hak|胃|tr=vi}}
 *: Mandarin: {{t+|cmn|胃|tr=wèi|sc=Hani}}, {{t+|cmn|肚子|tr=dùzi|sc=Hani}}
+*: Min Dong: {{t|cdo|胃|tr=ôi}}
+*: Min Nan: {{t+|nan|胃|tr=ūi / ui}}
+*: Wu: {{t|wuu|胃|tr=hhue}}
 * Chuvash: {{t-needed|cv}}
 * Corsican: {{t-needed|co}}
 * Crimean Tatar: {{t|crh|mide}}, {{t|crh|aşqazan}}
@@ -167,8 +172,8 @@ From {{inh|en|enm|stomak}}, from {{der|en|fro|estomac}}, from {{der|en|la|stomac
 * Luganda: {{t-needed|lg}}
 * Luo: {{t|luo|ich}}
 * Luxembourgish: {{t|lb|Mo|m}}
-* Macedonian: {{t|mk|желудник|m}}, {{t|mk|стомак|m}}
 {{trans-mid}}
+* Macedonian: {{t|mk|желудник|m}}, {{t|mk|стомак|m}}
 * Malay: {{t|ms|perut}}
 * Malayalam: {{t-needed|ml}}
 * Maltese: {{t|mt|stonku|m}}
