t+ca:[[zenit]] ([[WT:EDIT|Assisted]]) <zenith#51908780>

--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -60,6 +60,7 @@ From {{inh|en|enm|cenyth}}, from {{der|en|ML.|cenit}}, a transliteration of {{de
 * Arabic: {{t|ar|سَمْت|m}}, {{t|ar|ذُرْوَة|f}}
 * Armenian: {{t+|hy|զենիթ}}
 * Bulgarian: {{t+|bg|зени́т|m}}
+* Catalan: {{t|ca|zenit|m}}
 * Chinese:
 *: Mandarin: {{t+|cmn|天頂|sc=Hani}}, {{t+|cmn|天顶|tr=tiāndǐng|sc=Hani}}
 * Czech: {{t+|cs|nadhlavník|m}}, {{t+|cs|zenit|m}}
@@ -122,6 +123,7 @@ From {{inh|en|enm|cenyth}}, from {{der|en|ML.|cenit}}, a transliteration of {{de
 * Arabic: {{t|ar|سَمْت|m}}, {{t|ar|ذُرْوَة|f}}
 * Armenian: {{t+|hy|զենիթ}}
 * Bulgarian: {{t+|bg|зени́т|m}}
+* Catalan: {{t|ca|zenit|m}}
 * Chinese:
 *: Mandarin: {{t+|cmn|頂點|sc=Hani}}, {{t+|cmn|顶点|tr=dǐngdiǎn|sc=Hani}}
 * Czech: {{t+|cs|zenit|m}}
