/* Translations */ Added Zealandic. <come#51909989>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -310,6 +310,7 @@ The meaning of ''to ejaculate'' is considered vulgar slang. Many style guides an
 * Yoruba: {{t-needed|yo}}
 * Yucatec Maya: {{t|yua|tal}}
 * Zazaki: {{t|zza|amaene}}, {{t|zza|amayen}}
+* Zealandic: {{t|zea|komme}}
 * Zhuang: {{t|za|daeuj}}
 * Zulu: {{t|zu|za|alt=-za}}
 {{trans-bottom}}
