t+mi:[[takoki]] t+mi:[[tanoni]] t+mi:[[pakoki]] t+mi:[[tanoi]] ([[WT:EDIT|Assisted]]) <pull#51948002>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -375,7 +375,7 @@ From {{inh|en|enm|pullen}}, from {{inh|en|ang|pullian|t=to pull, draw, tug, pluc
 {{trans-bottom}}
 
 {{trans-top|to strain a muscle or ligament or tendon}}
-* Maori: {{t|mi|tanuku}}
+* Maori: {{t|mi|tanuku}}, {{t|mi|takoki }}, {{t|mi|tanoni }}, {{t|mi|pakoki }}, {{t|mi|tanoi }}
 {{trans-mid}}
 {{trans-bottom}}
 
