t+apc:[[حكى]] ([[WT:EDIT|Assisted]]) <speak#52053470>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -303,6 +303,7 @@ From {{inh|en|enm|speken|t=to speak}}, from {{inh|en|ang|specan|t=to speak}}, al
 
 {{trans-top|to be able to communicate in a language}}
 * Arabic: {{t|ar|تَكَلَّمَ|sc=fa-Arab}}
+*: North Levantine Arabic: {{t|apc|حكى|tr=ḥaka}}
 * Catalan: {{t+|ca|parlar}}
 * Cherokee: {{t|chr|ᎯᏬᏂ}}
 * Chinese:
